DBC22-1181: fix for friendly time tooltip clipping off at edges

--- a/src/frontend/src/Components/FriendlyTime.scss
+++ b/src/frontend/src/Components/FriendlyTime.scss
@@ -4,8 +4,10 @@
   text-decoration: underline;
   cursor: pointer;
   position: relative;
+  width: fit-content;
 
   &__tooltip {
+    font-size: 0.75rem;
     visibility: hidden;
     word-wrap: break-word;
     background-color: $Grey90;
@@ -17,38 +19,22 @@
     white-space: nowrap;
     z-index: 1;
     position: absolute;
-    top: 0;
-    left: -10px;
-    transform: translate(-100%, -25%);
-    margin-right: 7px;
-
-    @media (min-width: 576px) {
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, 0);
-      margin-top: 7px;
-    }
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin-top: 7px;
 
     &:before {
       content: "";
-      border-top: 7px solid transparent;
-      border-bottom: 7px solid transparent;
-      border-left: 7px solid $Grey90;
+      border-right: 7px solid transparent;
+      border-left: 7px solid transparent;
+      border-bottom: 7px solid $Grey90;
       position: absolute;
-      top: 7px;
-      left: 100%;
-      transform: translate(0, 25%);
-
-      @media (min-width: 576px) {
-        border-right: 7px solid transparent;
-        border-left: 7px solid transparent;
-        border-bottom: 7px solid $Grey90;
-        top: initial;
-        left: 50%;
-        bottom: 100%;
-        transform: translate(-50%, 0);
-        margin-left: 7px;
-      }
+      top: initial;
+      left: 50%;
+      bottom: 100%;
+      transform: translate(-50%, 0);
+      margin-left: 7px;
     }
 
     &.showTooltip {
