--- a/src/frontend/src/Components/cameras/WebcamCard.scss
+++ b/src/frontend/src/Components/cameras/WebcamCard.scss
@@ -120,6 +120,43 @@
         }
         margin-right: 10px;
       }
+
+      .friendly-time__tooltip {
+        top: 0;
+        left: -10px;
+        transform: translate(-100%, -25%);
+        margin-right: 7px;
+
+        @media (min-width: 576px) {
+          top: 100%;
+          left: 50%;
+          transform: translate(-50%, 0);
+          margin-top: 7px;
+        }
+
+        &:before {
+          content: "";
+          border-top: 7px solid transparent;
+          border-bottom: 7px solid transparent;
+          border-left: 7px solid $Grey90;
+          position: absolute;
+          top: 7px;
+          left: 100%;
+          transform: translate(0, 25%);
+          margin-left: 0;
+    
+          @media (min-width: 576px) {
+            border-right: 7px solid transparent;
+            border-left: 7px solid transparent;
+            border-bottom: 7px solid $Grey90;
+            top: initial;
+            left: 50%;
+            bottom: 100%;
+            transform: translate(-50%, 0);
+            margin-left: 7px;
+          }
+        }
+      }
     }
   }
 
